Btn background fix + backstory "overflow" fix

--- a/public/index.css
+++ b/public/index.css
@@ -74,7 +74,7 @@ wrapper {
 .popup > div{
     width: 75%;
     height: 60%;
-    background-color: rgb(222, 222, 222);
+    background-color: var(--color2);
     filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
     display: flex;
     flex-direction: column;
@@ -82,11 +82,11 @@ wrapper {
     align-items: center;
     color: rgb(0, 0, 0);
     z-index: 100;
-    border-radius: 15px;
+    border-radius: 25px;
 }
 
 .popup > div > div:first-child {
-    font-size: 4vw;
+    font-size: 5vw;
 }
 
 .popup > div > div:last-child {
@@ -95,8 +95,8 @@ wrapper {
     align-items: center;
     width: 40%;
     height: 10%;
-    background-color: var(--color13);
-    border-radius: 5px;
+    background-color: var(--color7);
+    border-radius: 10px;
 }
 
 .timerBox{
